# spec-kit

./: .gitignore  PYPI_README.md  package.json  pyproject.toml
.github/workflows/: publish-npm.yml  publish-pypi.yml
.github/workflows/scripts/: create-release-packages.sh
src/specify_cli/: __init__.py
templates/: constitution-template.md  plan-template.md
templates/commands/: implement.md  migrate.md  plan.md
templates/mcp-configs/: mcp-standard.json  mcp-vscode.json
