[project]
name = "modus-specify-cli"
version = "1.0.0"
description = "Trimble Spec-Driven Development Toolkit with Modus Web Components integration. Bootstrap projects with AI-powered spec-driven development and Modus design system defaults."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
specify = "specify_cli:main"
modus-specify = "specify_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]

