[project]
name = "trimble-spec-kit"
version = "1.0.2"
description = "Trimble Spec-Driven Development Toolkit with Modus Web Components integration."
readme = "PYPI_README.md"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
specify = "specify_cli:main"
speckit = "specify_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]

